--- a/apps/on-the-dodge/package.json
+++ b/apps/on-the-dodge/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.1",
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.4.1",
+    "@mantine/hooks": "^5.4.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "astro": "^1.3.0",
@@ -21,6 +24,7 @@
     "astro-seo": "^0.6.0",
     "autoprefixer": "^10.4.7",
     "canvas-confetti": "^1.5.1",
+    "date-fns": "^2.29.3",
     "eslint": "^8.24.0",
     "eslint-plugin-astro": "^0.19.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
