--- a/apps/on-the-dodge/package.json
+++ b/apps/on-the-dodge/package.json
@@ -12,27 +12,32 @@
     "format": "prettier --write ./src/**/*.{astro,html,js,jsx,md,mdx,svelte,ts,tsx,vue,cjs} --plugin-search-dir=./node_modules"
   },
   "dependencies": {
+    "@astrojs/react": "^1.2.1",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.0.1",
+    "@astrojs/tailwind": "^2.1.1",
     "@emotion/react": "^11.10.4",
-    "@mantine/core": "^5.4.1",
-    "@mantine/hooks": "^5.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "astro": "^1.3.0",
-    "astro-compress": "^1.0.8",
+    "@mantine/core": "^5.6.2",
+    "@mantine/dates": "^5.6.2",
+    "@mantine/form": "^5.6.2",
+    "@mantine/hooks": "^5.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "astro": "^1.5.2",
+    "astro-compress": "^1.0.12",
     "astro-seo": "^0.6.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.12",
     "date-fns": "^2.29.3",
-    "eslint": "^8.24.0",
+    "eslint": "^8.26.0",
     "eslint-plugin-astro": "^0.19.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.5.4",
+    "prettier-plugin-astro": "^0.5.5",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.8.4",
     "vite-plugin-pwa": "^0.13.1"
   }
 }
